data/derived/comb/progs/unify/prog2633.ml.out
Characters 100-108:
  if (x = [(), ()])
          ^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type 'b * 'c
